8346383: Cannot use DllMain in libdt_socket for static builds